docs(example): typo

--- a/docs/examples/ensemble-dimensions.ipynb
+++ b/docs/examples/ensemble-dimensions.ipynb
@@ -288,7 +288,6 @@
    "outputs": [],
    "source": [
     "# union aggregation\n",
-    "# intersection aggregation\n",
     "algo_expert_union = rpt.Window(width=WINDOW_SIZE, jump=1).fit(signal_with_noise)\n",
     "algo_expert_union.score = minmax_scale(score_arr).max(axis=1)  # scaling + pointwise max\n",
     "# 5 change points are present\n",
@@ -315,7 +314,8 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "This example shows two ways to aggregate cost functions for a 2D toy signal which contains mean-shifts that do not always co-occur.:\n",
+    "This example shows two ways to aggregate cost functions for a 2D toy signal which contains mean-shifts that do not always co-occur:\n",
+    "\n",
     "- the [intersection of experts](#intersection) detects changes that are detected by all cost functions simultaneously,\n",
     "- the [union of experts](#union) detects changes that are detected by at least one cost function.\n",
     "\n",
