docs(example): style

--- a/docs/examples/merging-cost-functions.ipynb
+++ b/docs/examples/merging-cost-functions.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "However, in many settings, several types of changes exist within a signal and a single cost function is not able to detect all changes simultaneously.\n",
     "To cope with this issue, a procedure to combine cost functions is needed.\n",
-    "In this examples, a technique inspired by [[Katser2021]](#Katser2021) is presented.\n",
+    "In this example, a technique inspired by [[Katser2021]](#Katser2021) is presented.\n",
     "In a nutshell, different costs are combined to yield an aggregated cost function which is sensitive to several types of changes.\n",
     "The aggregated cost can then be used with the [window search method](../user-guide/detection/window.md) to create a change point detection algorithm.\n",
     "\n",
@@ -31,7 +31,7 @@
     "- or detect shifts that occur on any dimension (union of experts).\n",
     "\n",
     "Here, only [CostL2](../user-guide/costs/costl2.md) is considered for all dimensions, but all other costs could be used. The focus is then on the way the costs are combined (see [intersection](#intersection) and [union](#union)).\n",
-    "In addition, the number of changes is assumed to be known by the user."
+    "For simplicity, the number of changes is assumed to be known by the user."
    ]
   },
   {
@@ -257,7 +257,7 @@
     "## Detection with an aggregated cost function\n",
     "### Intersection\n",
     "\n",
-    "A first way of aggregating the scores is to consider each score along a dimension as being an expert. The idea is then to take the __intersection__ of the experts so that the predicted change points are the change points where all the experts are confident. This method is useful when the user is interested in collecting the change points that occur on all dimensions simultaneously. To that end, the scores are scaled to the [0, 1] range then the pointwise minimum is taken.\n",
+    "A first way of aggregating the scores is to consider each score along a dimension as being an expert. The idea is to take the __intersection__ of the experts so that the predicted change points are the change points where all the experts are confident. This method is useful when the user is interested in collecting the change points that occur on all dimensions simultaneously. To that end, the scores are scaled to the [0, 1] range then the pointwise minimum is taken.\n",
     "\n",
     "In the following cell, the intersection procedure correctly predicts the only common change point between the two dimensions. The aggregated score shows clearly the only change point to predict."
    ]
