docs: fix example notebooks (#287)
* docs: change CountVectorizer method call for feature names

* docs: run nbstripout

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* docs: run nbqa-black pre-commit

* docs(music): re-order imports and remove unused

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/docs/examples/music-segmentation.ipynb
+++ b/docs/examples/music-segmentation.ipynb
@@ -44,9 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import librosa\n",
-    "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
+    "import librosa\n",
     "import numpy as np\n",
     "from IPython.display import Audio, display\n",
     "\n",
@@ -283,7 +282,7 @@
     "# Compute change points corresponding indexes in original signal\n",
     "bkps_time_indexes = (sampling_rate * bkps_times).astype(int).tolist()\n",
     "\n",
-    "for (segment_number, (start, end)) in enumerate(\n",
+    "for segment_number, (start, end) in enumerate(\n",
     "    rpt.utils.pairwise([0] + bkps_time_indexes), start=1\n",
     "):\n",
     "    segment = signal[start:end]\n",
@@ -352,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.6"
   },
   "toc-autonumbering": false,
   "toc-showmarkdowntxt": false
