--- a/docs/examples/text-segmentation.ipynb
+++ b/docs/examples/text-segmentation.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "# print 5 sentences from the original text\n",
     "start, end = 9, 14\n",
-    "for (line_number, sentence) in enumerate(original_text[start:end], start=start + 1):\n",
+    "for line_number, sentence in enumerate(original_text[start:end], start=start + 1):\n",
     "    sentence = sentence.strip(\"\\n\")\n",
     "    print(f\"{line_number:>2}: {sentence}\")"
    ]
@@ -213,7 +213,7 @@
     "vectorizer = CountVectorizer(analyzer=\"word\")\n",
     "vectorized_text = vectorizer.fit_transform(transformed_text)\n",
     "\n",
-    "msg = f\"There are {len(vectorizer.get_feature_names())} different words in the corpus, e.g. {vectorizer.get_feature_names()[20:30]}.\"\n",
+    "msg = f\"There are {len(vectorizer.get_feature_names_out())} different words in the corpus, e.g. {vectorizer.get_feature_names_out()[20:30]}.\"\n",
     "print(msg)"
    ]
   },
@@ -363,7 +363,7 @@
     "true_segment_list = rpt.utils.pairwise([0] + TRUE_BKPS)\n",
     "predicted_segment_list = rpt.utils.pairwise([0] + predicted_bkps)\n",
     "\n",
-    "for (n_paragraph, (true_segment, predicted_segment)) in enumerate(\n",
+    "for n_paragraph, (true_segment, predicted_segment) in enumerate(\n",
     "    zip(true_segment_list, predicted_segment_list), start=1\n",
     "):\n",
     "    print(f\"Paragraph n°{n_paragraph:02d}\")\n",
@@ -411,11 +411,11 @@
     "label_fontsize = 7\n",
     "title_list = [\"True text segmentation\", \"Predicted text segmentation\"]\n",
     "\n",
-    "for (ax, title, bkps) in zip(ax_arr, title_list, [TRUE_BKPS, predicted_bkps]):\n",
+    "for ax, title, bkps in zip(ax_arr, title_list, [TRUE_BKPS, predicted_bkps]):\n",
     "    # plot gram matrix\n",
     "    ax.imshow(algo.cost.gram.toarray(), cmap=cm.plasma, norm=LogNorm())\n",
     "    # add text segmentation\n",
-    "    for (start, end) in rpt.utils.pairwise([0] + bkps):\n",
+    "    for start, end in rpt.utils.pairwise([0] + bkps):\n",
     "        draw_square_on_ax(start=start, end=end, ax=ax)\n",
     "    # add labels and title\n",
     "    ax.set_title(title, fontsize=title_fontsize)\n",
@@ -454,15 +454,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for (start, end) in rpt.utils.pairwise([0] + TRUE_BKPS):\n",
+    "for start, end in rpt.utils.pairwise([0] + TRUE_BKPS):\n",
     "    excerpt = original_text[start:end]\n",
-    "    for (n_line, sentence) in enumerate(excerpt, start=start + 1):\n",
+    "    for n_line, sentence in enumerate(excerpt, start=start + 1):\n",
     "        sentence = sentence.strip(\"\\n\")\n",
     "        print(f\"{n_line:>2}: {sentence}\")\n",
     "    print()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -501,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
